--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ transition: all 1s;
     border-radius: 50%;
 }
 .Social-Media i:hover{
- color: rgb(255, 230, 8);
+ color: #666;
    
 }
 /*Ruth =>em = rem
