--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ transition: all 1s;
     border-radius: 50%;
 }
 .Social-Media i:hover{
- color: #666;
+ color: rgb(0, 0, 0);
    
 }
 /*Ruth =>em = rem
