--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@
 }
 
 :root{
-   
+    --font-primary:"Josefin Slab" , serif;
     --font-secudary:"Muli",serif;
+    --font-Terceary:"Lato",serif
 }
 .Grid{
 /*background-color: red;*/
@@ -239,8 +240,93 @@ transition: all 1s;
     border-radius: 50%;
 }
 .Social-Media i:hover{
- color: rgb(0, 0, 0);
+ color: rgb(12, 255, 154);
    
 }
+.sessao-conhecimentos{
+    background-color: #dfdfdf;
+}
+.conhecimentos{
+    display: grid;
+    grid-template-columns: repeat(16,1fr);
+    grid-template-rows:  repeat(6, 6rem);
+    row-gap: .5rem;
+}
+
+.conhecimento:nth-child(1){
+   grid-column: 4 / 7;
+   grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(2){
+   grid-column: 3 / 6;
+   grid-row: 3 / 5;
+}
+.conhecimento:nth-child(3){
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+ }
+
+ .conhecimento:nth-child(4){
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+ }
+
+ .conhecimento:nth-child(5){
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+ }
+
+ .conhecimento:nth-child(6){
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+ }
+ .sessao-header{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
+.sessao-header h1{
+    text-align: center;
+    font-family: var(--font-secudary);
+    font-size: 3rem;
+    color: #4b4b4b;
+    border-bottom: solid 4px #00d2ff;
+    margin-bottom: 1.5rem;
+}
+
+.conhecimento-header{
+    display: flex;
+    align-items: center;
+    color: #4d4d4d;
+}
+
+.conhecimento-header i{
+    font-size: 2.5rem;
+   
+}
+.conhecimento-header h3{
+    font-family: var(--font-Terceary);
+    font-size: 2rem;
+    padding-left: 1rem;
+ 
+}
+.conhecimento-text{
+    font-family: var(--font-primary);
+    color: #4d4d4d;
+    margin-top: 1rem;
+}
+
+.conhecimento-img-wrapper{
+    grid-column: 7/11;
+    grid-row: 2/6;
+    width: 100%;
+}
+
+.conhecimento-img-wrapper img{
+    object-fit: cover;
+    width: 100%;
+}
+
 /*Ruth =>em = rem
 /*X é a posição horizontal e Y é a posição vertical e tem a posição Z que vai definir a profundidade do elemento
