--- a/style.css
+++ b/style.css
@@ -248,9 +248,10 @@ transition: all 1s;
 }
 .conhecimentos{
     display: grid;
-    grid-template-columns: repeat(16,1fr);
-    grid-template-rows:  repeat(6, 6rem);
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows:  repeat(6, 11rem);
     row-gap: .5rem;
+   
 }
 
 .conhecimento:nth-child(1){
@@ -288,7 +289,7 @@ transition: all 1s;
  }
 .sessao-header h1{
     text-align: center;
-    font-family: var(--font-secudary);
+    font-family: var(--font-Terceary);
     font-size: 3rem;
     color: #4b4b4b;
     border-bottom: solid 4px #00d2ff;
@@ -306,7 +307,7 @@ transition: all 1s;
    
 }
 .conhecimento-header h3{
-    font-family: var(--font-Terceary);
+    font-family: var(--font-primary);
     font-size: 2rem;
     padding-left: 1rem;
  
@@ -314,7 +315,7 @@ transition: all 1s;
 .conhecimento-text{
     font-family: var(--font-primary);
     color: #4d4d4d;
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 .conhecimento-img-wrapper{
@@ -326,6 +327,31 @@ transition: all 1s;
 .conhecimento-img-wrapper img{
     object-fit: cover;
     width: 100%;
+}
+
+.projetos{
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+.card{
+    width: 20rem;
+    height: 30rem;
+}
+
+.card-img-wrapper{
+    width: 100%;
+    height: 100%;
+    background-color: #262626;
+    border-radius: .5rem;
+}
+
+.card-img-wrapper img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+   
+    opacity: .8;
 }
 
 /*Ruth =>em = rem
