--- a/style.css
+++ b/style.css
@@ -14,10 +14,14 @@
     text-decoration: none;
 }
 
+html{
+    scroll-behavior: smooth;
+}
 :root{
     --font-primary:"Josefin Slab" , serif;
     --font-secudary:"Muli",serif;
-    --font-Terceary:"Lato",serif
+    --font-Terceary:"Baloo Da 2";
+
 }
 .Grid{
 /*background-color: red;*/
@@ -202,7 +206,7 @@ transition: all 1s;
 
 .menu-item{
     text-align: center;
-    margin-bottom: .7rem;
+    margin-bottom: 0.5rem;
 }
 
 .menu-link{
@@ -244,62 +248,66 @@ transition: all 1s;
    
 }
 .sessao-conhecimentos{
-    background-color: #dfdfdf;
+    background-color: #f5f5f5;
+    height: 100%;
+    width: 100%;
 }
 .conhecimentos{
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
-    grid-template-rows:  repeat(4, 7rem);
-    row-gap: 6rem;
+    grid-template-rows:  repeat(6, 6rem);
+    row-gap: 0.5rem;
    
 }
 
 .conhecimento:nth-child(1){
-   grid-column: 4 / 7;
+   grid-column: 3 / 9;
    grid-row: 1 / 3;
 }
 
 .conhecimento:nth-child(2){
-   grid-column: 3 / 6;
-   grid-row: 3 / 5;
+   grid-column: 1 / 7;
+   grid-row: 3 / 7;
 }
 .conhecimento:nth-child(3){
-    grid-column: 4 / 7;
-    grid-row: 5 / -1;
+    grid-column: 2 / 8;
+    grid-row: 5 / -2;
  }
 
  .conhecimento:nth-child(4){
-    grid-column: 11 / 14;
+    grid-column: 10 / 21;
     grid-row: 1 / 3;
  }
 
  .conhecimento:nth-child(5){
-    grid-column: 12 / 15;
+    grid-column: 11 / 19;
     grid-row: 3 / 5;
  }
 
  .conhecimento:nth-child(6){
-    grid-column: 11 / 14;
-    grid-row: 5 / -1;
+    grid-column: 17 / 10;
+    grid-row: 5 / -2;
  }
  .sessao-header{
      display: flex;
-     justify-content: center;
      align-items: center;
+     justify-content: center;
+   
  }
 .sessao-header h1{
-    text-align: center;
+    
     font-family: var(--font-Terceary);
     font-size: 3rem;
     color: #4b4b4b;
-    border-bottom: solid 4px #00d2ff;
+    border-bottom: solid 3px #00d2ff;
     margin-bottom: 1.5rem;
 }
 
 .conhecimento-header{
     display: flex;
     align-items: center;
-    color: #4d4d4d;
+    color: #4b4b4b;
 }
 
 .conhecimento-header i{
@@ -308,30 +316,36 @@ transition: all 1s;
 }
 .conhecimento-header h3{
     font-family: var(--font-primary);
-    font-size: 1.5rem;
+    font-size: 2rem;
     padding-left: 1rem;
  
 }
 .conhecimento-text{
     font-family: var(--font-primary);
     color: #4d4d4d;
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .conhecimento-img-wrapper{
     grid-column: 7/11;
-    grid-row: 2/6;
-    width: 100%;
+    grid-row: 3/6;
+    width: 80%;
+    height: 80%;
+    align-items: center;
 }
 
 .conhecimento-img-wrapper img{
     object-fit: cover;
-    width: 100%;
+   height: 100%;
+   
+    
+  
 }
 
 .projetos{
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 2rem;
     
 }
 .card{
