--- a/style.css
+++ b/style.css
@@ -189,6 +189,7 @@ top:0;
 right:0;
 right: -20rem;
 transition: all 1s;
+z-index: 80;
 }
 .show-menu .sidebar{
     right: 0;
@@ -408,20 +409,25 @@ transition: all 1s;
   width: 80%;
   margin-bottom: 2rem;
 }
+.Submit{
+    text-transform: uppercase;
+   
+    background-color:#00d2ff;  
+    background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  
+    background: linear-gradient(to left, #3a7bd5, #00d2ff);  ;
+    border: none;
+    font-family: var(--font-secudary);
+    font-size: 1rem;
+    color: #eee;
+    border-radius: .5rem;
+    box-shadow: 0 .1rem .8rem rgba(0,0,0,.4); 
+}
 .card-info button{
     
   
    width: 8rem;
    height: 3rem;
-   background-color:#00d2ff;  
-   background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  
-   background: linear-gradient(to left, #3a7bd5, #00d2ff);  ;
-   border: none;
-   font-family: var(--font-secudary);
-   font-size: 1rem;
-   color: #eee;
-   border-radius: .5rem;
-   box-shadow: 0 .1rem .8rem rgba(0,0,0,.4);
+  
 }
 
 .card:hover .card-info{
@@ -429,6 +435,104 @@ transition: all 1s;
     opacity: 1;
     visibility: visible;
 }
+.sessao-contato{
+width: 100%;
+height: 100vh;
+background-color: #272727;
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+.contato-wrapper{
+    width: 60%;
+    height: 30rem;
+    display: flex;
+    box-shadow: 0 2rem 3rem rgba(0, 0, 0,0.5);
+}
+.contato-left{
+    width: 35%;
+    background:
+    linear-gradient(to bottom, rgba(15,15,15,0.6),rgba(22,22,22,0.9)), 
+    url(Imagens/contato.jpg);
+    background-size: cover;
+}
+.contato-right{
+    width: 65%;
+    background-color: #eee;
+    padding: 1rem 3rem 3rem;
+}
+
+.sessao-contato h1{
+    width: 100%;
+    text-align: center;
+    font-family: var(--font-secudary);
+    color: #272727;
+    font-size: 3rem;
+    font-weight: lighter;
+    margin-bottom: 3rem;
+}
+
+.sessao-contato form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+}
+
+.field{
+    background-color: transparent;
+    border: none;
+    width: 20rem;
+    font-size: 1.5rem;
+    font-family: var(--font-Terceary);
+    margin-bottom: 1rem;
+    border-bottom: 2px dashed #636363;
+    height: 3rem;
+    outline: none;
+    margin: 1rem 0;
+}
+
+.input-group{
+    position: relative;
+}
+.input-group textarea{
+    padding-top: 1rem;
+    max-width: 25rem;
+    max-height: 3rem;
+}
+.field-label{
+    position: absolute;
+    left: 0;
+    top: 2rem;
+    font-size: 1.2rem;
+    font-family: var(--font-primary);
+     text-transform: uppercase;
+     font-weight: lighter;
+     opacity: .8;
+     transition: all .3s;
+}
+
+.field:focus ~ label{
+ top: 0;
+ font-size: 1rem;
+}
+
+.field:focus{
+    top: 0;
+    font-size: 1rem;
+    border-bottom: solid 1px;
+   }
+.Subimit-style{
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    width: 100%;
+    height: 3rem;
+    margin-top: 1rem;
+}
+
 
 /*Ruth =>em = rem
 /*X é a posição horizontal e Y é a posição vertical e tem a posição Z que vai definir a profundidade do elemento
+/*Z-index faz com que o item que está atrás venha para frente
